--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
 <meta name=robots content="index, follow">
-<title>グラフィックスプログラミング覚書</title>
+<title>notes on graphics programming</title>
 <meta name=description content>
 <meta name=author content>
 <link rel=canonical href=https://jimbi-o.github.io/>
@@ -20,21 +20,21 @@
 <noscript>
 <style>#theme-toggle,.top-link{display:none}</style>
 <style>@media(prefers-color-scheme:dark){:root{--theme:rgb(29, 30, 32);--entry:rgb(46, 46, 51);--primary:rgb(218, 218, 219);--secondary:rgb(155, 156, 157);--tertiary:rgb(65, 66, 68);--content:rgb(196, 196, 197);--hljs-bg:rgb(46, 46, 51);--code-bg:rgb(55, 56, 62);--border:rgb(51, 51, 51)}.list{background:var(--theme)}.list:not(.dark)::-webkit-scrollbar-track{background:0 0}.list:not(.dark)::-webkit-scrollbar-thumb{border-color:var(--theme)}}</style>
-</noscript><meta property="og:title" content="グラフィックスプログラミング覚書">
+</noscript><meta property="og:title" content="notes on graphics programming">
 <meta property="og:description" content>
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://jimbi-o.github.io/">
 <meta name=twitter:card content="summary">
-<meta name=twitter:title content="グラフィックスプログラミング覚書">
+<meta name=twitter:title content="notes on graphics programming">
 <meta name=twitter:description content>
-<script type=application/ld+json>{"@context":"https://schema.org","@type":"Organization","name":"グラフィックスプログラミング覚書","url":"https://jimbi-o.github.io/","description":"","thumbnailUrl":"https://jimbi-o.github.io/favicon.ico","sameAs":[]}</script>
+<script type=application/ld+json>{"@context":"https://schema.org","@type":"Organization","name":"notes on graphics programming","url":"https://jimbi-o.github.io/","description":"","thumbnailUrl":"https://jimbi-o.github.io/favicon.ico","sameAs":["https://twitter.com/o_jimbi","https://github.com/jimbi-o"]}</script>
 </head>
 <body class=list id=top>
 <script>localStorage.getItem("pref-theme")==="dark"?document.body.classList.add('dark'):localStorage.getItem("pref-theme")==="light"?document.body.classList.remove('dark'):window.matchMedia('(prefers-color-scheme: dark)').matches&&document.body.classList.add('dark')</script>
 <header class=header>
 <nav class=nav>
 <div class=logo>
-<a href=https://jimbi-o.github.io/ accesskey=h title="グラフィックスプログラミング覚書 (Alt + H)">グラフィックスプログラミング覚書</a>
+<a href=https://jimbi-o.github.io/ accesskey=h title="notes on graphics programming (Alt + H)">notes on graphics programming</a>
 <span class=logo-switches>
 <button id=theme-toggle accesskey=t title="(Alt + T)"><svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"/></svg><svg id="sun" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="5"/><line x1="12" y1="1" x2="12" y2="3"/><line x1="12" y1="21" x2="12" y2="23"/><line x1="4.22" y1="4.22" x2="5.64" y2="5.64"/><line x1="18.36" y1="18.36" x2="19.78" y2="19.78"/><line x1="1" y1="12" x2="3" y2="12"/><line x1="21" y1="12" x2="23" y2="12"/><line x1="4.22" y1="19.78" x2="5.64" y2="18.36"/><line x1="18.36" y1="5.64" x2="19.78" y2="4.22"/></svg>
 </button>
@@ -60,7 +60,23 @@
 </nav>
 </header>
 <main class=main>
-<article class=first-entry>
+<article class="first-entry home-info">
+<header class=entry-header>
+<h1>Welcome!</h1>
+</header>
+<section class=entry-content>
+<p>Notes on graphics programming</p>
+</section>
+<footer class=entry-footer>
+<div class=social-icons>
+<a href=https://twitter.com/o_jimbi target=_blank rel="noopener noreferrer me" title=Twitter><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M23 3a10.9 10.9.0 01-3.14 1.53 4.48 4.48.0 00-7.86 3v1A10.66 10.66.0 013 4s-4 9 5 13a11.64 11.64.0 01-7 2c9 5 20 0 20-11.5a4.5 4.5.0 00-.08-.83A7.72 7.72.0 0023 3z"/></svg>
+</a>
+<a href=https://github.com/jimbi-o target=_blank rel="noopener noreferrer me" title=Github><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37.0 00-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44.0 0020 4.77 5.07 5.07.0 0019.91 1S18.73.65 16 2.48a13.38 13.38.0 00-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07.0 005 4.77 5.44 5.44.0 003.5 8.55c0 5.42 3.3 6.61 6.44 7A3.37 3.37.0 009 18.13V22"/></svg>
+</a>
+</div>
+</footer>
+</article>
+<article class=post-entry>
 <header class=entry-header>
 <h2>appveyor + codecov + coverity scan
 </h2>
@@ -70,7 +86,7 @@
 d3d12がVisual Studioのみなので、travis捨ててappveyorだけあればいいやという動機で着手。
 appveyor + codecov version: 1.0.{build} image: - Visual Studio 2019 configuration: - Debug - Release install: - choco install opencppcoverage codecov - set PATH=C:\Program Files\OpenCppCoverage;%PATH% before_build: - cmd: cmake -S . -B build -DBUILD_WITH_TEST=ON build_script: - cmake --build build --config %configuration% for: - matrix: only: - configuration: Debug after_build: - cd build - OpenCppCoverage.exe --sources src --sources tests --export_type cobertura:coverage.xml --modules "*.exe" --cover_children -- %configuration%/illuminate.exe -C %configuration% --output-on-failure - codecov -f coverage....</p>
 </section>
-<footer class=entry-footer><span title="2021-12-27 23:30:18 +0900 +0900">December 27, 2021</span></footer>
+<footer class=entry-footer><span title="2021-12-27 23:30:18 +0900 +0900">December 27, 2021</span>&nbsp;·&nbsp;1 min</footer>
 <a class=entry-link aria-label="post link to appveyor + codecov + coverity scan" href=https://jimbi-o.github.io/posts/20211227-appveyor-codecov-coverity/></a>
 </article>
 <article class=post-entry>
@@ -82,12 +98,12 @@ appveyor + codecov version: 1.0.{build} image: - Visual Studio 2019 configuratio
 <p>作業メモ 作業レポジトリ
 hugoをインストール sudo apt install hugo quickstartに則ってコンテンツを作成 config.tomlのlanguageCodeを変更 languageCode = "ja" RSS用の設定らしい ルートディレクトリ下に.github/workflows/gh-pages.ymlを作成 こちらに中身が置いてある githubでレポジトリ[username].github.ioを作成 こちらに従ってデプロイ用のトークンを設定 gitにcommitしてpushする [username].github.ioのレポジトリのSettings > Pages > Github Pages > Source で Branch:mainになっているところをBranch:gh-pagesに変更 hugoのgithub actionsだとデフォルトでgh-pagesにコミットされるため 参考 quickstart ローカルでの動作確認URL: http://localhost:1313/ WSL2だとLiveReloadが動かない？ -> symbolic link越しで/dev/mnt以下にリンクしていると動かないらしい。 githubにサイトをセットアップする 初期セットアップ step-by-step tutorial another tutorial </p>
 </section>
-<footer class=entry-footer><span title="2021-12-27 17:34:36 +0900 +0900">December 27, 2021</span></footer>
+<footer class=entry-footer><span title="2021-12-27 17:34:36 +0900 +0900">December 27, 2021</span>&nbsp;·&nbsp;1 min</footer>
 <a class=entry-link aria-label="post link to github + hugo" href=https://jimbi-o.github.io/posts/20211227-setup-hugo-with-github/></a>
 </article>
 </main>
 <footer class=footer>
-<span>&copy; 2021 <a href=https://jimbi-o.github.io/>グラフィックスプログラミング覚書</a></span>
+<span>&copy; 2021 <a href=https://jimbi-o.github.io/>notes on graphics programming</a></span>
 <span>
 Powered by
 <a href=https://gohugo.io/ rel="noopener noreferrer" target=_blank>Hugo</a> &
